@@ -176,9 +176,9 @@ unsigned int soundkonverter_replaygain_aacgain::apply( const KUrl::List& fileLis
 
     QStringList command;
     command += binaries["aacgain"];
-    command += "-k";
     if( mode == ReplayGainPlugin::Add )
     {
+        command += "-k";
         if( modifyAudioStream )
         {
             command += "-a";
@@ -187,6 +187,7 @@ unsigned int soundkonverter_replaygain_aacgain::apply( const KUrl::List& fileLis
     }
     else if( mode == ReplayGainPlugin::Force )
     {
+        command += "-k";
         if( modifyAudioStream )
         {
             command += "-a";
@@ -268,6 +269,13 @@ void soundkonverter_replaygain_aacgain::undoProcessExit( int exitCode, QProcess:
 
     QStringList command;
     command += binaries["aacgain"];
+    // APE tags
+    command += "-s";
+    command += "a";
+    // ID3v2 tags
+    command += "-s";
+    command += "i";
+    // delete tags
     command += "-s";
     command += "d";
     foreach( const KUrl file, item->undoFileList )
